fix: covers that aren't square may have bad shadow

--- a/theme.less
+++ b/theme.less
@@ -640,6 +640,10 @@
 .play-page-mixin() {
     height: 100%;
 
+    .cdin {
+        box-shadow: none;
+    }
+
     .cdwrap,
     .cdin,
     .cdimg {
